<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_overlay_plugins</name>
  <version>0.1.0</version>
  <description>Display apriltag detections in image overlay</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rqt_image_overlay_layer</depend>
  <depend>apriltag_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
